--- a/css/burger.css
+++ b/css/burger.css
@@ -7,10 +7,6 @@
     display: block;
   }
 
-  #nav_toggle {
-    opacity: 0;
-  }
-
   .nav_button {
     display: flex;
     align-items: center;
@@ -32,6 +28,7 @@
     height: 2px;
     background-color: var(--color-font);
   }
+  
   .nav_button > span::before {
     content: "";
     top: -10px;
@@ -46,7 +43,7 @@
     position: absolute;
     visibility: hidden;
     top: 0;
-    right: -100%;
+    right: 0;
     width: 300px;
     height: 100%;
     margin: 0;
