--- a/css/contacts.css
+++ b/css/contacts.css
@@ -15,10 +15,6 @@
   text-align: center;
 }
 
-#nav_toggle {
-  opacity: 0;
-}
-
 .container_contacts {
   flex-direction: column;
   margin-top: 120px;
@@ -39,13 +35,13 @@
   flex-direction: column;
 }
 
-.heading_contacts,
+.heading_name,
 .name {
   font-family: Rye;
   color: var(--color-font);
 }
 
-.heading_contacts {
+.heading_name {
   font-size: 30px;
   line-height: 37px;
 }
@@ -104,7 +100,7 @@
     margin-left: 0;
   }
 
-  .heading_contacts {
+  .heading_name {
     width: 400px;
   }
 
@@ -135,7 +131,7 @@
 }
 
 @media screen and (max-width: 369px) {
-  .heading_contacts {
+  .heading_name {
     width: 100%;
   }
 
